- Добавил бэкграунд для сплэш и дровера для разных разрешений - Работа с БД - Закончена работа со списком персон

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Game of Thrones</string>
+    <string name="lannister_home_title">LANNISTERS</string>
+    <string name="stark_home_title">STARKS</string>
+    <string name="targariens_home_title">TARGARYENS</string>
+
 </resources>
